--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
   <button id="divideButton">计算结果</button>
 
   <script>
+    window.alert = function(name){     
+      var iframe = document.createElement("IFRAME");     
+      iframe.style.display="none";     
+      iframe.setAttribute("src", 'data:text/plain,');     
+      document.documentElement.appendChild(iframe);     
+      window.frames[0].window.alert(name);     
+      iframe.parentNode.removeChild(iframe); 
+    };
     function divideBy30() {
       const input = document.getElementById("numberInput");
       const value = parseFloat(input.value);
