--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <h1>输入一个数字并除以30</h1>
+  <h1>输入一个数字并除以30的数</h1>
   <input type="text" id="numberInput" pattern="[0-9]*" oninput="this.value=this.value.replace(/[^\d]/g, '')" />
   <button id="divideButton">计算结果</button>
 
